# driftarmor-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  wedge-miss-list.md
.github/workflows/: codeql.yml  publish.yml
fixtures/acr-plan/: README.md  fail.json  pass.json
fixtures/aks-plan/: README.md  fail.json  no_aks.json  pass.json
fixtures/drift-plan/: create_update.json  destroy.json  empty.json  malformed_resource_changes.json  noop_read.json  replace.json  unknown_actions.json
fixtures/frontdoor-plan/: README.md  fail.json  pass.json
fixtures/keyvault-plan/: README.md  fail.json  pass.json
fixtures/nsg-plan/: README.md  fail.json  pass.json
fixtures/redis-plan/: README.md  fail.json  pass.json
fixtures/servicebus-plan/: README.md  fail.json  pass.json
fixtures/sql-plan/: README.md  fail.json  pass.json
fixtures/sqlmi-plan/: README.md  fail.json  pass.json
fixtures/storage-plan/: README.md  fail.json  pass.json
fixtures/vm-plan/: README.md  fail.json  pass.json
policies/: __init__.py  citations.json
policies/acr/: __init__.py  acr_admin_disabled.py  acr_anonymous_pull_disabled.py  acr_network_restricted.py
policies/aks/: __init__.py  aks_cluster_present.py  aks_monitor_oms.py  aks_network_private_or_authorized.py  aks_node_pool_present.py  aks_rbac_azure_rbac.py
policies/frontdoor/: __init__.py  frontdoor_waf_enabled.py  frontdoor_waf_managed_rules.py  frontdoor_waf_prevention.py
policies/keyvault/: __init__.py  keyvault_network_restricted.py  keyvault_purge_protection.py  keyvault_rbac_authorization.py
policies/nsg/: __init__.py  nsg_common.py  nsg_open_all_internet.py  nsg_open_rdp_internet.py  nsg_open_ssh_internet.py
policies/redis/: __init__.py  redis_access_keys_auth.py  redis_client_protocol.py  redis_identity.py  redis_public_network.py
policies/servicebus/: __init__.py  servicebus_local_authentication.py  servicebus_min_tls.py  servicebus_network_restricted.py
policies/sql/: __init__.py  sql_entra_admin.py  sql_firewall_any_ip.py  sql_min_tls.py  sql_public_network.py  sql_tde.py
policies/sqlmi/: __init__.py  sqlmi_entra_admin.py  sqlmi_identity.py  sqlmi_min_tls.py  sqlmi_public_data_endpoint.py
policies/storage/: __init__.py  storage_blob_public_access.py  storage_https_only.py  storage_min_tls.py  storage_network_restricted.py
policies/vm/: __init__.py  vm_encryption_at_host.py  vm_linux_password_auth.py  vm_managed_identity.py  vm_trusted_launch.py
src/driftarmor/: __init__.py  aks.py  checkov_runner.py  cli.py  color.py  drift.py  packs.py  plan_io.py  report.py  terraform_plan.py
tests/: test_acr_cli.py  test_acr_policies.py  test_cli.py  test_color.py  test_drift.py  test_drift_cli.py  test_keyvault_cli.py  test_keyvault_policies.py  test_keyvault_report.py  test_packs.py  test_policy_assets.py  test_report.py  test_rule_registry.py  test_servicebus_cli.py  test_servicebus_policies.py  test_servicebus_report.py  test_terraform_plan.py
tests/fixtures/: checkov_fail_snippet.json  checkov_pass_snippet.json
