[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftarmor"
version = "0.1.0"
description = "Checkov-backed Azure Terraform plan implement coach (AKS / SQL / SQL MI / Storage / Managed Redis / Key Vault / ACR / Service Bus / VM / NSG / Front Door)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "checkov>=3.2,<4",
  # Direct pin so Dependabot/dependency-graph see the patched release
  # (Checkov 3.3.x still declares aiohttp<3.14; overridden below).
  "aiohttp>=3.14.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
driftarmor = "driftarmor.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["driftarmor*", "policies*"]
namespaces = false

[tool.setuptools.package-data]
policies = ["citations.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires checkov binary on PATH",
]

# Transitive Checkov deps: pin patched aiohttp for Dependabot CVEs.
[tool.uv]
# Force patched aiohttp past Checkov's upper bound (<3.14.0 on 3.3.x).
override-dependencies = [
  "aiohttp>=3.14.1",
]
