[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftarmor"
version = "0.1.0"
description = "Checkov-backed Azure Terraform plan implement coach (AKS / SQL / SQL MI / Storage / Managed Redis / Key Vault / ACR / Service Bus / VM / NSG / Front Door)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "DriftArmor", email = "hello@driftarmor.net" }]
keywords = ["terraform", "azure", "checkov", "iac", "security", "aks"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "checkov>=3.2,<4",
  # Direct pin so Dependabot/dependency-graph see the patched release
  # (Checkov 3.3.x still declares aiohttp<3.14; overridden below).
  "aiohttp>=3.14.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://www.driftarmor.net"
Repository = "https://github.com/kodias/driftarmor-cli"
Issues = "https://github.com/kodias/driftarmor-cli/issues"

[project.scripts]
driftarmor = "driftarmor.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["driftarmor*", "policies*"]
namespaces = false

[tool.setuptools.package-data]
policies = ["citations.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires checkov binary on PATH",
]

# Transitive Checkov deps: pin patched aiohttp for Dependabot CVEs.
[tool.uv]
# Force patched aiohttp past Checkov's upper bound (<3.14.0 on 3.3.x).
override-dependencies = [
  "aiohttp>=3.14.1",
]
